--- a/listas.html
+++ b/listas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DCC202 - Atividade 4: Gustavo Costa</title>
+    <title>DCC202 - Atividade - Lista 4: Gustavo Costa</title>
 </head>
 
 <body>
