--- a/tabelas.html
+++ b/tabelas.html
@@ -9,7 +9,7 @@
 
 <body>
     <main>
-        <h1>DCC202 - Atividade 4: Gustavo Costa</h1>
+        <h1>DCC202 - Atividade 4 - Tabelas: Gustavo Costa</h1>
         <p>Esta é a página sobre tabelas. Temos também a página sobre <a href="listas.html"> listas </a> e a <a
                 href="index.html"> página principal.</a></p>
     </main>
